# graylog2zabbix

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
cmake/: cppcheck.cmake  status.cmake
include/dan/: env.hpp  logger.hpp  relay.hpp
src/: CMakeLists.txt  env.cpp  logger.cpp  relay.cpp
